--- a/style.css
+++ b/style.css
@@ -20,11 +20,14 @@ body {
   height: 322px;
 }
 .divs {
+  border: 1px solid rgb(36, 221, 107);
+  width: 100%;
+}
+.dive {
   border: 1px solid rgb(36, 70, 221);
   width: 20px;
   height: 20px;
 }
-
 .container > div:hover {
   background-color: cadetblue;
 }
