--- a/style.css
+++ b/style.css
@@ -13,24 +13,28 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   border: 1px solid rgb(211, 74, 20);
-  justify-content: center;
-  width: 322px;
-  height: 322px;
+  width: 500px;
+  height: 500px;
 }
 .divs {
+  display: flex;
   border: 1px solid rgb(36, 221, 107);
   width: 100%;
-}
-.dive {
-  border: 1px solid rgb(36, 70, 221);
-  width: 20px;
   height: 20px;
 }
-.container > div:hover {
-  background-color: cadetblue;
+.dive {
+  border: 0.01px solid black;
+  flex: 1;
+  flex-shrink: 2;
+  width: 15px;
+  height: 100%;
+  display: inline-block;
+}
+.dive:hover {
+  background-color: black;
 }
 .addBackground {
-  background-color: cadetblue;
+  background-color: black;
 }
