--- a/style.css
+++ b/style.css
@@ -5,21 +5,26 @@
 }
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  /* background-color: bisque; */
   width: 100%;
 }
-
+h1 {
+  color: rgb(233, 10, 10);
+}
 .container {
   display: flex;
   flex-direction: column;
   border: 1px solid rgb(211, 74, 20);
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 .divs {
   display: flex;
+  flex: 1;
   border: 1px solid rgb(36, 221, 107);
   width: 100%;
   height: 20px;
@@ -37,4 +42,15 @@ body {
 }
 .addBackground {
   background-color: black;
+}
+.reset {
+  background-color: white;
+}
+button {
+  padding: 3px;
+  margin-bottom: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: red;
+  color: white;
 }
