--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  /* background-color: bisque; */
+  background-color: bisque;
   width: 100%;
 }
 h1 {
@@ -25,12 +25,10 @@ h1 {
 .divs {
   display: flex;
   flex: 1;
-  border: 1px solid rgb(36, 221, 107);
   width: 100%;
   height: 20px;
 }
 .dive {
-  border: 0.01px solid black;
   flex: 1;
   flex-shrink: 2;
   width: 15px;
@@ -41,7 +39,7 @@ h1 {
   background-color: black;
 }
 .addBackground {
-  background-color: black;
+  background-color: rgb(118, 212, 11);
 }
 .reset {
   background-color: white;
